Service osztályok módosítása
- Nem használt kódrészletek eltávolítása.
- Kód megfelelő tagolása az összefüggő részek szerint.
- Stream műveletek új sorba rendezése.
- For ciklusok átírása streamekké.
- VendegService osztályban a getElfogyasztottMennyisegByVendegId metódus paraméterének módosítása longról Vendeg típusra, valamint a repository hívás elhagyása, mivel a getVendegekByElfogyasztottMennyiseg metódusban már egy konkrét vendég ID-ját kapja paraméterül.
- VendegConverter osztályban a repository hívások helyettesítése a paraméterben kapott adatokkal.
- VendegServiceTest osztályban a long vendegId paraméterek módosírása Vendeg típusra, a service-ben végzett módosítások miatt.