@@ -42,44 +42,60 @@ public class KocsmazasService {
     private KocsmazasConverter kocsmazasConverter;
 
     public long startKocsmazas(long vendegId) throws KocsmazasException {
+        Vendeg vendeg;
+
+        try {
+            vendeg = vendegService.findById(vendegId);
+
+        } catch (Exception e) {
+            throw new KocsmazasException(NINCS_VENDEG);
+        }
+
         try {
             Kocsmazas kocsmazas = new Kocsmazas();
             kocsmazas.setMettol(LocalDateTime.now());
-            Vendeg vendeg;
-            try {
-                vendeg = vendegService.findById(vendegId);
-            } catch (Exception e) {
-                throw new KocsmazasException(NINCS_VENDEG);
-            }
             kocsmazas.setVendeg(vendeg);
+
             return kocsmazasRepository.save(kocsmazas).getId();
+
         } catch (Exception e) {
             throw new KocsmazasException(SIKERTELEN);
         }
-
     }
 
     public Kocsmazas getBefejezetlenKocsmazasByVendegId(long vendegId) throws KocsmazasException {
         List<Kocsmazas> kocsmazasList;
+
         try {
             kocsmazasList = kocsmazasRepository.findAllByVendeg_Id(vendegId);
+
         } catch (Exception e) {
             throw new KocsmazasException(NINCS_VENDEG + vendegId);
         }
-        Optional<Kocsmazas> befejezetlenKocsmazas = kocsmazasList.stream().filter(kocsmazas -> kocsmazas.getMeddig() == null).findFirst();
+
+        Optional<Kocsmazas> befejezetlenKocsmazas = kocsmazasList.stream()
+                .filter(kocsmazas -> kocsmazas.getMeddig() == null)
+                .findFirst();
+
         return befejezetlenKocsmazas.orElse(null);
     }
 
     public List<Kocsmazas> getAllBefejezetlenKocsmazas() {
         List<Kocsmazas> kocsmazasList = kocsmazasRepository.findAll();
-        return kocsmazasList.stream().filter(kocsmazas -> kocsmazas.getMeddig() == null).collect(Collectors.toList());
+        return kocsmazasList.stream()
+                .filter(kocsmazas -> kocsmazas.getMeddig() == null)
+                .collect(Collectors
+                        .toList());
     }
 
     public long finishKocsmazas(long vendegId) throws KocsmazasException {
         Kocsmazas befejezetlenKocsmazas = getBefejezetlenKocsmazasByVendegId(vendegId);
+
         if (befejezetlenKocsmazas != null) {
             befejezetlenKocsmazas.setMeddig(LocalDateTime.now());
+
             return kocsmazasRepository.save(befejezetlenKocsmazas).getId();
+
         } else {
             throw new KocsmazasException(NINCS_VENDEG + vendegId);
         }
@@ -89,12 +105,15 @@ public class KocsmazasService {
         Kocsmazas kocsmazas = getBefejezetlenKocsmazasByVendegId(vendegId);
         if (kocsmazas != null) {
             kocsmazas.setDetoxbaKerult(true);
+
             try {
                 kocsmazasRepository.save(kocsmazas);
+
             } catch (Exception e) {
                 throw new KocsmazasException(SIKERTELEN);
             }
             finishKocsmazas(vendegId);
+
         } else {
             throw new KocsmazasException(NINCS_VENDEG + vendegId);
         }
@@ -102,15 +121,15 @@ public class KocsmazasService {
 
     public boolean vendegIsDetoxos(Long vendegId) throws KocsmazasException {
         int allKocsmazasByVendegDetoxban;
+
         try {
             allKocsmazasByVendegDetoxban = kocsmazasRepository.getKocsmazasCountByVendegDetoxban(vendegId);
+
         } catch (Exception e) {
             throw new KocsmazasException(NINCS_VENDEG + vendegId);
         }
-        if (allKocsmazasByVendegDetoxban > MAX_DETOX) {
-            return true;
-        }
-        return false;
+
+        return allKocsmazasByVendegDetoxban > MAX_DETOX;
     }
 
     public double getHetiAtlagosKocsmazasSzama(Long vendegId) throws KocsmazasException {
@@ -119,6 +138,7 @@ public class KocsmazasService {
 
         try {
             kocsmazasokSzama = kocsmazasRepository.findAllByVendeg_Id(vendegId).size();
+
         } catch (Exception e) {
             throw new KocsmazasException(SIKERTELEN);
         }
@@ -126,6 +146,7 @@ public class KocsmazasService {
         KocsmazasIdotartam kocsmazasIdotartam;
         try {
             kocsmazasIdotartam = kocsmazasRepository.findElsoEsUtolsoKocsmazasByVendegId(vendegId);
+
         } catch (Exception e) {
             throw new KocsmazasException(NINCS_KOCSMAZAS + vendegId);
         }
@@ -133,33 +154,40 @@ public class KocsmazasService {
         if (kocsmazasIdotartam.getMettol() != null && kocsmazasIdotartam.getMeddig() != null) {
             napokSzama = (int) Duration.between(kocsmazasIdotartam.getMettol(), kocsmazasIdotartam.getMeddig()).toDays() + 1;
             int hetekSzama = (int) Math.ceil(napokSzama / 7.0);
+
             return (double) kocsmazasokSzama / hetekSzama;
         }
         return 0.0;
     }
 
     public double getVendegAtlagosFogyasztasAdatok(Long vendegId) throws KocsmazasException {
-        int fogyasztasSuly = 0;
         List<FogyasztasAdatok> fogyasztasAdatok;
+
         try {
             fogyasztasAdatok = fogyasztasRepository.getFogyasztasAdatok(vendegId);
+
         } catch (Exception e) {
             throw new KocsmazasException(NINCS_FOGYASZTAS);
         }
-        for (FogyasztasAdatok fa : fogyasztasAdatok) {
-            fogyasztasSuly += (fa.getAdagMennyisege() * fa.getElfogyasztottMennyiseg() * fa.getAlkoholTartalom());
-        }
+
+        int fogyasztasSuly = fogyasztasAdatok.stream()
+                .mapToInt(fogyasztas -> fogyasztas.getAdagMennyisege() * fogyasztas.getElfogyasztottMennyiseg()
+                        * fogyasztas.getAlkoholTartalom())
+                .sum();
+
         return (double) fogyasztasSuly / fogyasztasAdatok.size();
     }
 
     public boolean isAlkoholista(Long vendegId) throws KocsmazasException {
-        return vendegIsDetoxos(vendegId) && getHetiAtlagosKocsmazasSzama(vendegId) > MAX_KOCSMAZAS && getVendegAtlagosFogyasztasAdatok(vendegId) > MAX_FOGYASZTAS;
+        return vendegIsDetoxos(vendegId) && getHetiAtlagosKocsmazasSzama(vendegId) > MAX_KOCSMAZAS
+                && getVendegAtlagosFogyasztasAdatok(vendegId) > MAX_FOGYASZTAS;
     }
 
     public List<KocsmazasDto> isAlkoholistaWithCriteriaBuilder(Long vendegId) throws KocsmazasException {
         try {
             return kocsmazasConverter.convertKocsmazasListToKocsmazasDtoList(
                     kocsmazasRepository.isAlkoholistaWithCriteriaBuilder(vendegId));
+
         } catch (Exception e) {
             throw new KocsmazasException(NINCS_VENDEG);
         }
